--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
+APScheduler==3.11.0
 blinker==1.9.0
 certifi==2025.1.31
 charset-normalizer==3.4.1
 click==8.1.8
+clicksend-client==5.0.78
 Flask==3.1.0
 flask-cors==5.0.1
 gunicorn==23.0.0
@@ -11,9 +13,12 @@ itsdangerous==2.2.0
 Jinja2==3.1.6
 MarkupSafe==3.0.2
 packaging==24.2
+python-dateutil==2.9.0.post0
 requests==2.32.3
+six==1.17.0
 stripe==12.0.0
 typing_extensions==4.13.2
+tzlocal==5.3.1
 urllib3==2.4.0
 Werkzeug==3.1.3
 zipp==3.21.0
